--- a/docs/main.bib
+++ b/docs/main.bib
@@ -24,6 +24,17 @@ ebib-main-file: /home/alex/Documents/research/references.bib
 	journal = {Hoboken, NJ}
 }
 
+@BOOK{Evans2009-of,
+	title = "Probability and statistics",
+	author = "Evans, Michael J and Rosenthal, Jeffrey S",
+	publisher = "W.H. Freeman",
+	edition = 2,
+	month = nov,
+	year = 2009,
+	address = "New York, NY",
+	language = "en"
+}
+
 @BOOK{Gendreau2018-pw,
 	title = {Handbook of Metaheuristics},
 	editor = {Gendreau, Michel and Potvin, Jean-Yves},
@@ -76,6 +87,18 @@ ebib-main-file: /home/alex/Documents/research/references.bib
 	url = {http://dx.doi.org/10.1007/978-0-387-74503-9_13},
 	ISBN = 9780387745039,
 	publisher = {Springer US}
+}
+
+@Article{NaiveHalmos,
+	author = {Halmos, Paul R.},
+	title = {Naive Set Theory},
+	journal = {Undergraduate Texts in Mathematics},
+	year = 1974,
+	issn = {0172-6056},
+	doi = {10.1007/978-1-4757-1645-0},
+	url = {http://dx.doi.org/10.1007/978-1-4757-1645-0},
+	ISBN = 9781475716450,
+	publisher = {Springer New York}
 }
 
 @INPROCEEDINGS{Qarebagh2019,
@@ -134,11 +157,5 @@ ebib-main-file: /home/alex/Documents/research/references.bib
 	year = "2022",
 	url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
 	note = "[Online; accessed 29-July-2022]"
-}
-
-@misc{tutorials_point,
-	title = {Find if two rectangles overlap using C++.},
-	url = {https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
-	journal = {Tutorials Point}
 }
 
