--- a/docs/milp-approach.org
+++ b/docs/milp-approach.org
@@ -22,6 +22,11 @@
 #+latex_header: \renewcommand*{\paragraphautorefname}{Paragraph}
 
 # =========================================================================================================================
+# Custom `Algoritm2e' commands
+#+latex_header: \newcommand{\Or}{\textbf{ or }}
+#+latex_header: \newcommand{\And}{\textbf{ and }}
+
+# =========================================================================================================================
 # Custom commands
 #+latex_header: \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{gray}{#1}}
 
@@ -34,6 +39,7 @@
                                                             # Single visit tuple
 #+latex_header: \newcommand{\I}{\mathbb{I}}                 % Set of visit tuples
 #+latex_header: \newcommand{\C}{\mathbb{C}}                 % Charger availability information
+#+latex_header: \newcommand{\U}{\mathcal{U}}                % Uniform distribution
 #+latex_header: \newcommand{\Sol}{\mathbb{S}}               % A shorthand for visit tuple
 
 #+latex_header: \newcommand{\Iset}{\mathcal{I}}             % Set of visits 1-I
@@ -78,7 +84,7 @@ to be queued $q \in \{1,...,Q\} = \Qset \subset \mathcal{Z}$ where the bus is in
 \in \{1,...,B\} = \Bset \in \mathcal{Z}$. Each bus arrival, $i$, can be represented by the tuple: $\visit$, in which
 the ordered elements denote the bus identification number arrival time to the station, departure time from the station,
 initial charging time, charge end time, the charger queue for the bus to be placed into, and the initial State Of Charge
-(SOC).
+(SOC). The term ``tuple'' refers to an ordered set.
 
 It is assumed that each visit occurs over the time horizon $T$. The set of all arrivals is represented by the set $\I =
 \{\visit: b_i, \xi_i \in B, a_i, e_i, u_i, d_i \in T, v_i \in Q\}$. The concept of "arrivals" is derived from the PAP
@@ -615,7 +621,7 @@ valid charging queue, $v_i \in \{1,..., Q\}$. Line 2 initializes the set of solu
 through each charger availability set and line 4 loops thorough each of the available ranges, denoted as $L$ and $U$ for
 lower and upper free time. Line 5 checks if the range $[a_i, e_i] \subset [L, U]$, and line 6 adds it to the set of
 candidates. Line 10 chooses picks a candidate soluition,$x_i' \subset X_i'$, with a discrete uniform distribution which
-is denoted by $\mathcal{U}_{\{\cdot\}}$.
+is denoted by $\U_{\{\cdot\}}$.
 
 #+name: alg:new-visit
 #+begin_export latex
@@ -632,6 +638,9 @@ is denoted by $\mathcal{U}_{\{\cdot\}}$.
 
     \Begin
     {
+        $i    \leftarrow \{i: i \in \Sol \}$ \tcc*{The index of the visit $i$}
+        $a_i  \leftarrow \{ a_i \in \I_i : \I_i \in \I \subset \Sol \}$ \tcc*{Get the arrival time for visit $i$}
+        $e_i  \leftarrow \{ e_i \in \I_i : \I_i \in \I \subset \Sol \}$ \tcc*{Get the departure time for visit $i$}
         $X_i' \leftarrow \varnothing$ \tcc*{Begin with the empty set}
 
         \ForEach (\tcc*[f]{For set of availabile times for charger $q$}) {$\C_q \in \C$}
@@ -640,11 +649,12 @@ is denoted by $\mathcal{U}_{\{\cdot\}}$.
             {
                 \If(\tcc*[f]{If there is time available in $C$}){\findFreeTime{C, ($a_i, e_i$)} $\not\in \varnothing$}
                 {
+                    $x_i' \rightarrow$ \findFreeTime{C, ($a_i, e_i$)} \tcc*{Assign $x_i'$ to the found reigion}
                     $X_i' \cup x_i'$ \tcc*{Add $x_i'$ to the set of candidates}
                 }
             }
         }
-        \Return{$\mathcal{U}_{X_i'}$} \tcc*[f]{Return a random candidate}
+        \Return{$\U_{X_i'}$} \tcc*[f]{Return a random candidate}
     }
 \end{algorithm}
 #+end_export
@@ -671,23 +681,23 @@ the time between scheduled times. The possible use cases are depicted in [[fig:f
     {
         \If(\tcc*[f]{If $L < a < e < U]$ (\autoref{subfig:sandwich})}){$L \leq a$ and $U \geq e$}
         {
-                u $\leftarrow$ $\mathcal{U}_{[a,e]}$\;
-                d $\leftarrow$ $\mathcal{U}_{[u,e]}$\;
+                u $\leftarrow$ $\U_{[a,e]}$\;
+                d $\leftarrow$ $\U_{[u,e]}$\;
         }
         \ElseIf(\tcc*[f]{Else if $a < L < e < U$ (\autoref{subfig:all})}){$L > a$ and $U \geq e$}
         {
-                u $\leftarrow$ $\mathcal{U}_{[L,e]}$\;
-                d $\leftarrow$ $\mathcal{U}_{[u,e]}$\;
+                u $\leftarrow$ $\U_{[L,e]}$\;
+                d $\leftarrow$ $\U_{[u,e]}$\;
         }
-        \ElseIf(\tcc*[f]{Else if $L < a < U < e$ (\autoref{subfig:egu})}}){$L \leq a$ and $U < e$}
+        \ElseIf(\tcc*[f]{Else if $L < a < U < e$ (\autoref{subfig:egu})}){$L \leq a$ and $U < e$}
         {
-                u $\leftarrow$ $\mathcal{U}_{[a,U]}$\;
-                d $\leftarrow$ $\mathcal{U}_{[u,U]}$\;
+                u $\leftarrow$ $\U_{[a,U]}$\;
+                d $\leftarrow$ $\U_{[u,U]}$\;
         }
         \ElseIf(\tcc*[f]{Else if $a \leq u \leq d \leq L$ or $U \leq a \leq d \leq e$ (\autoref{subfig:invertsandwhich})}){$L > a$ and $U < e$}
         {
-                u $\leftarrow$ $\mathcal{U}_{[a,L], [U,e]}$\;
-                d $\leftarrow$ $\mathcal{U}_{[u,L], [u,e]}$\;
+                u $\leftarrow$ $\U_{[a,L], [U,e]}$\;
+                d $\leftarrow$ $\U_{[u,L], [u,e]}$\;
         }
         \Else(\tcc*[f]{Otherwise the bus cannot be scheduled in this time frame (\autoref{subfig:invalid})})
         {
@@ -704,10 +714,11 @@ the time between scheduled times. The possible use cases are depicted in [[fig:f
 :PROPERTIES:
 :CUSTOM_ID: slide-visit
 :END:
-Slide visit is used for buses that have already been scheduled. Because $a_i \leq u_i \leq d_i \leq e_i$ (arrival time
-is less than initial charge time which is less than the detach time which is less than the time the bus exists the
-station), there may be some room to move $u_i$ and $d_i$ within the window $[a_i, e_i]$. Two new values, $u_i$
-and $d_i$ are selected with a uniform distribution to satisfy $a_i \leq u_i \leq d_i \leq e_i$.
+Slide visit is used for buses that have already been scheduled. Because of the constraint \ref{seq:c10}
+there may be some room to move $u_i$ and $d_i$ within the window $[a_i, e_i]$. Two new values, $u_i$ and
+$d_i$ are selected with a uniform distribution to satisfy the constraint $a_i \leq u_i \leq d_i \leq e_i$.
+Lines 1 and 2 get the arrival and departure times, and line 3 gets the current queue that visit $i$ is
+assigned to.
 
 #+name: alg:slide-visit
 #+begin_export latex
@@ -716,18 +727,22 @@ and $d_i$ are selected with a uniform distribution to satisfy $a_i \leq u_i \leq
 \caption{Slide Visit Algorithm}
     \LinesNumbered
     \TitleOfAlgo{Slide Visit}
-    \KwIn{Visit index, route data, Charger data: ($i$, route-data, charger-data)}
-    \KwOut{$x_i'$: $(v,u,d)$}
+    \KwIn{$\Sol$}
+    \KwOut{$x_i'$}
 
     \Begin
     {
-        $a \leftarrow$ route-data[$i$].$a$\;
-        $e \leftarrow$ route-data[$i$].$e$\;
+	$X_i' \in \{ [u_i, d_i] \}$ \tcc*{Initialize candidates with the current charge time}
 
-        $u \leftarrow$ $\mathcal{U}_{[a,e]}$\;
-        $d \leftarrow$ $\mathcal{U}_{[u,e]}$\;
-
-        \Return{(v,d)}
+        \ForEach (\tcc*[f]{For each inactive region in $\C_q$ where $q = v_i$}) {$C \in \C_q$}
+        {
+            \If(\tcc*[f]{If there is time available in $C$}){\findFreeTime{C, ($a_i, e_i$)} $\not\in \varnothing$}
+            {
+                $x_i' \rightarrow$ \findFreeTime{C, ($a_i, e_i$)} \tcc*{Assign $x_i'$ to the found reigion}
+                $X_i' \cup x_i'$ \tcc*{Add $x_i'$ to the set of candidates}
+            }
+        }
+        \Return{$x_i'$}
     }
 \end{algorithm}
 #+end_export
@@ -736,9 +751,9 @@ and $d_i$ are selected with a uniform distribution to satisfy $a_i \leq u_i \leq
 :PROPERTIES:
 :CUSTOM_ID: new-charger
 :END:
-Similar to new visit, this generator moves a bus from one queue to another; however, the new charger generator moves a
-bus from one charger queue to another, $v_i \in \{0,..,Q\}$. A new charger will be selected at random with a uniform
-distribution.
+The new charger generator takes a visit $\I_i$ and changes the charger it is on while maintianing the same charge time,
+$[u_i, d_i]$. Similarly to [[alg:new-visit]], the new candidate, $x_i'$, must be checked before being added to the set
+$X_i'$.
 
 #+name: alg:new-charger
 #+begin_export latex
@@ -752,20 +767,24 @@ distribution.
 
     \Begin
     {
-       $a \leftarrow$ route-data[$i$].$a$\;
-       $e \leftarrow$ route-data[$i$].$e$\;
-       $v \leftarrow$ route-data[$i$].$v$\;
-       valid-visit  $\leftarrow \varnothing$\;
+        $X_i' \leftarrow \varnothing$ \tcc*{Begin with the empty set}
 
-       \For{$q\; \leftarrow 0$ \KwTo $Q$ and $q \neq v$}
-       {
-               \For{region $\leftarrow$ \KwTo q.free}
-               {
-                       \Union{valid-visit, \findFreeTime{region, (a,e)}}\;
-               }
-       }
+        \ForEach (\tcc*[f]{For set of availabile times for charger $q$}) {$\C_q \in \C$}
+        {
+            \ForEach (\tcc*[f]{For each inactive region in $\C_q$}) {$C \in \C_q$}
+            {
+               \tcc{If $L < a < e < U]$ or $a < L < e < U$ or $L < a < U < e$ or  $L > a$ or $U < e$}
+                \If {$L \leq a \And U \geq e$ \Or
+                    $L > a \And U \geq e$ \Or
+                    $L \leq a \And U < e$ \Or
+                    $a \leq u \leq d \leq L \Or U \leq a \leq d \leq e$}
+                {
+                        $X_i' \cup (q, u_i, d_i)$
+                }
+            }
+        }
 
-       \Return{$\mathcal{U}_{[valid-visit[0],valid-visit[length(valid-visit)-1]]}$}
+        \Return{$\U_{X_i'}$}
     }
 \end{algorithm}
 #+end_export
@@ -789,7 +808,6 @@ The remove generator simply removes a bus from a charger queue and places it in 
 
     \Begin
     {
-
        $v \leftarrow Q+b$                \;
        $u \leftarrow$ route-data[$i$].$u$\;
        $d \leftarrow$ route-data[$i$].$d$\;
@@ -929,7 +947,7 @@ further elaborated on later.
         }
         \Else
         {
-            depart $\leftarrow$ arrival-old + $\mathcal{U}_{[\text{min-rest},\text{max-rest}]}$\;
+            depart $\leftarrow$ arrival-old + $\U_{[\text{min-rest},\text{max-rest}]}$\;
         }
 
         \Return{depart}
@@ -965,8 +983,8 @@ each visit. The state diagram is depicted in the state digram in [[fig:schedule]
         schedule $\leftarrow\; \varnothing$\;
         \For {i in I}
         {
-            bus $\leftarrow\; \mathcal{U}_{[0,B]}$\;
-            visit $\leftarrow\; \mathcal{U}_{[0,I]}$\;
+            bus $\leftarrow\; \U_{[0,B]}$\;
+            visit $\leftarrow\; \U_{[0,I]}$\;
             \Union{schedule,\NewVisit{(visit.a, visit.e)}}\;
         }
             \Return{schedule}
@@ -1000,8 +1018,8 @@ generator. This state diagram is depicted in [[fig:perturb]] and outlined in Alg
     {
         \For {i in I}
         {
-            visit $\leftarrow\; \mathcal{U}_{[0,I]}$\;
-            generator $\leftarrow\; \mathcal{U}_{[0,generator-count]}$\;
+            visit $\leftarrow\; \U_{[0,I]}$\;
+            generator $\leftarrow\; \U_{[0,generator-count]}$\;
             schedule $\leftarrow$ \GeneratorCallback[generator]{(visit, route-data, charger-data)}\;
         }
 
